Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <!-- blog -->
     <div class="blog ">
         <div class="blog-l">
-            <a href="#" alt ="read more"><img src="images/ภูทอก-ดินแดนมหัศจรรย์.jpg" alt="read more" width="800" height="450"></a>
+            <a href="#" alt ="read more"><img src="ภูทอก-ดินแดนมหัศจรรย์.jpg" alt="read more" width="800" height="450"></a>
         </div>
         <div class="blog-m">
             <div class="blog-m1">
@@ -131,3 +131,4 @@
 
 </body>
 </html>
+
